grammar.js
    source_file: ($) => $.toplevel_item,

    toplevel_item: ($) => repeat1($.statement),

    statement: ($) => seq(choice($.comment, $.directive), $._NEWLINE),

    comment: ($) => /;.*/,
    directive: ($) =>
      choice($.section, $.extern, $.global, $.builtin, $.ins, $.label),

    label: ($) => seq($.identifier, ":", optional($.directive)),
    ins: ($) => seq($.ins_kw, optional($.operand_args)),

    operand_args: ($) => seq($.operand, repeat(seq(",", $.operand))),

    operand: ($) =>
      seq(
        optional($.width),
        optional("ptr"),
        choice(
          $.register,
          $.effective_addr,
          $.string_literal,
          $.integer_literal,
          $.operand_ident,
        ),
      ),

    register: ($) =>
      choice(
        $.register_8bit,
        $.register_16bit,
        $.register_32bit,
        $.register_64bit,
        $.register_simd,
      ),

    integer_literal: ($) =>
      choice(
        $._decimal_literal,
        $._octal_literal,
        $._hex_literal,
        $._binary_literal,
      ),

    _decimal_literal: ($) => choice(/[0-9]+d/, /0d[0-9]+/, /[0-9]+/),

    _hex_literal: ($) =>
      choice(/[0-9a-fA-F]+h/, /\$0[0-9a-fA-F]+/, /0[xh][0-9a-fA-F]+/),

    _octal_literal: ($) => choice(/[0-7]+[qo]/, /0[oq][0-7]+/),

    _binary_literal: ($) => choice(/[01_]+[by]/, /0[by][01_]+/),

    identifier: ($) => $._IDENTIFIER,
    _IDENTIFIER: ($) => /[A-Za-z0-9.@_-]+/,

    _NEWLINE: ($) => seq(optional($.comment), choice("\n", "\r\n")),

    ins_kw: ($) =>
      choice(
        $.ins_8086,
        $.ins_80186,
        $.ins_80286,
        $.ins_80386,
        $.ins_80486,
        $.ins_pentium,
        $.ins_pentium_mmx,
        $.ins_amd_k6,
        $.ins_pentium_pro,
        $.ins_pentium_2,
        $.ins_sse_non_simd,
        $.ins_sse2,
        $.ins_sse3,
        $.ins_sse4_2,
        $.ins_x86_64,
        $.ins_bitmanip,
        $.ins_clmul,
        $.ins_adx,
        $.ins_intel_tsx,
        $.ins_intel_mpx,
        $.ins_intel_cet,
        $.ins_8087,
        $.ins_80287,
        $.ins_80387,
        $.ins_pentium_pro,
        $.ins_sse,
        $.ins_sse3,
        $.ins_mmx,
        $.ins_mmx_plus_and_sse,
        $.ins_mmx_sse2,
        $.ins_3dnow,
        $.ins_3dnow_plus,
        $.ins_geode_gx,
        $.ins_sse_pentium3,
        $.ins_sse2_pentium4,
        $.ins_sse3_pentium4,
        $.ins_sse4_1,
        $.ins_sse4a,
        $.ins_sse4_2_nehalem,
        $.ins_f16c,
        $.ins_fma3,
        $.ins_fma4,
        $.ins_avx,
        $.ins_avx2,
        $.ins_avx512,
        $.ins_intel_aes,
        $.ins_rdrand,
        $.ins_intel_sha,
        $.ins_virt_amd_v,
        $.ins_virt_vt_x,
        $.ins_undoc,
      ),
