test/corpus/comments.txt
================================================================================
simple instruction
================================================================================

mov rax, 2

--------------------------------------------------------------------------------

(source_file
  (directive
    (ins
      (mnemonic)
      (operand_args
        (operand
          (register))
        (operand
          (integer_literal))))))

================================================================================
simple instruction preceded by comment
================================================================================

; a comment
mov rax, 2

--------------------------------------------------------------------------------

(source_file
  (comment)
  (directive
    (ins
      (mnemonic)
      (operand_args
        (operand
          (register))
        (operand
          (integer_literal))))))

================================================================================
simple instruction with a trailing comment
================================================================================

mov rax, 2
; a comment

--------------------------------------------------------------------------------

(source_file
  (directive
    (ins
      (mnemonic)
      (operand_args
        (operand
          (register))
        (operand
          (integer_literal)))))
  (comment))

================================================================================
simple instruction with a trailing comment (same line)
================================================================================

mov rax, 2 ; a comment

--------------------------------------------------------------------------------

(source_file
  (directive
    (ins
      (mnemonic)
      (operand_args
        (operand
          (register))
        (operand
          (integer_literal)))))
  (comment))

================================================================================
two trailing comments (same line)
================================================================================

mov rax, 2 ; a comment
mov rax, 2 ; a comment

--------------------------------------------------------------------------------

(source_file
  (directive
    (ins
      (mnemonic)
      (operand_args
        (operand
          (register))
        (operand
          (integer_literal)))))
  (comment)
  (directive
    (ins
      (mnemonic)
      (operand_args
        (operand
          (register))
        (operand
          (integer_literal)))))
  (comment))
