test/corpus/labels.txt
================================================================================
label on its own line
================================================================================

_start:
	mov rax, 2

--------------------------------------------------------------------------------

(source_file
  (directive
    (label
      (identifier)
      (directive
        (ins
          (mnemonic)
          (operand_args
            (operand
              (register))
            (operand
              (integer_literal))))))))

================================================================================
label followed by instruction
================================================================================

_start: mov rax, 2

--------------------------------------------------------------------------------

(source_file
  (directive
    (label
      (identifier)
      (directive
        (ins
          (mnemonic)
          (operand_args
            (operand
              (register))
            (operand
              (integer_literal))))))))

================================================================================
label followed by instruction followed by comment
================================================================================

_start: mov rax, 2 ; ahAH!

--------------------------------------------------------------------------------

(source_file
  (directive
    (label
      (identifier)
      (directive
        (ins
          (mnemonic)
          (operand_args
            (operand
              (register))
            (operand
              (integer_literal)))))))
  (comment))

================================================================================
label followed by instruction followed by comment, then another instruction
================================================================================

_start: mov rax, 2 ; ahAH!
			  mov rdi, rax

--------------------------------------------------------------------------------

(source_file
  (directive
    (label
      (identifier)
      (directive
        (ins
          (mnemonic)
          (operand_args
            (operand
              (register))
            (operand
              (integer_literal)))))))
  (comment)
  (directive
    (ins
      (mnemonic)
      (operand_args
        (operand
          (register))
        (operand
          (register))))))

================================================================================
label followed by instruction followed by comment, then another instruction (alt)
================================================================================

_start: ret ; ahAH!
			  ret

--------------------------------------------------------------------------------

(source_file
  (directive
    (label
      (identifier)
      (directive
        (ins
          (mnemonic)))))
  (comment)
  (directive
    (ins
      (mnemonic))))
