test/corpus/nasm-stuff.txt
================================================================================
dumb comments
================================================================================

; dumb comment
_start:     mov     rax, 2
            mov     rdi, path ; trailing comment
            xor     rsi, rsi

--------------------------------------------------------------------------------

(ERROR
  (ERROR
    (comment)
    (UNEXPECTED 's')
    (objdump_section_addr)
    (UNEXPECTED 't')
    (objdump_section_addr)
    (UNEXPECTED 't'))
  (comment)
  (UNEXPECTED '\0'))

================================================================================
hard comments
================================================================================

_start:     mov     rax, 2      ; "open"
            mov     rdi, path   ; 
            xor     rsi, rsi    ; O_RDONLY

--------------------------------------------------------------------------------

(source_file
  (ERROR
    (UNEXPECTED 's')
    (objdump_section_addr)
    (UNEXPECTED 't')
    (comment)
    (UNEXPECTED 't')
    (comment))
  (toplevel_item
    (statement
      (directive
        (ins
          (ins_kw
            (MISSING "_ins_sse2_pentium4_token1"))))
      (comment))))
